--- a/views/components/global/VideoCard.module.css
+++ b/views/components/global/VideoCard.module.css
@@ -5,6 +5,7 @@
     background-size: cover;
     border-radius: 1rem;
     overflow: hidden;
+    background-color: rgb(27, 27, 27);
 }
 
 .play_btn{
