--- a/views/components/dashboard/IncomesChestCard.module.css
+++ b/views/components/dashboard/IncomesChestCard.module.css
@@ -1,8 +1,10 @@
 .con{
-    height: 16.8rem;
+    height: 22rem;
     width: 16rem;
     display: flex;
     align-items: center;
+    justify-content: space-around;
+    padding: 2rem 0;
     flex-direction: column;
     background-color: white;
     border-radius: 1rem;
@@ -56,7 +58,7 @@
     font-size: 0.86rem;
     color: rgb(100, 100, 100);
     margin-top: 1.6rem;
-    padding: 0 1rem;
+    padding: 0 2.5rem;
     text-align: center;
     margin-bottom: 1.6rem;
 }
