--- a/public/styles/forced.css
+++ b/public/styles/forced.css
@@ -1,4 +1,3 @@
-
 .ant-checkbox-checked .ant-checkbox-inner {
     background-color: #FBAD16 !important;
     border-color: #FBAD16 !important;
@@ -21,6 +20,23 @@
 .ant-checkbox:hover .ant-checkbox-inner, 
 .ant-checkbox-input:focus + .ant-checkbox-inner{
     border-color: #FBAD16 !important;
+}
+
+/*ant-design radio button*/
+.ant-radio-inner::after{
+    background-color: #FBAD16 !important;
+}
+.ant-radio-checked .ant-radio-inner{
+    border-color: #FBAD16 !important;
+}
+.ant-radio-checked::after{
+    border-color: #FBAD16 !important;
+}
+.ant-radio-wrapper:hover .ant-radio, .ant-radio:hover .ant-radio-inner, .ant-radio-input:focus + .ant-radio-inner{
+    border-color: #FBAD16 !important;
+}
+.ant-radio-input:focus + .ant-radio-inner{
+    box-shadow: 0 0 0 3px #fdd689;
 }
 
 .ant-notification-notice-with-icon .ant-notification-notice-message{
