--- a/views/components/editable/EditableText.module.css
+++ b/views/components/editable/EditableText.module.css
@@ -14,3 +14,12 @@
     font-size: 1rem;
     padding: 0.8rem 1.4rem;
 }
+
+.error{
+    position: absolute;
+    bottom: -1.3rem;
+    font-size: 0.7rem;
+    right: 1rem;
+    font-weight: 500;
+    direction: rtl;
+}
