--- a/views/components/editCourse/EditCourseContents.module.css
+++ b/views/components/editCourse/EditCourseContents.module.css
@@ -100,8 +100,9 @@
 }
 
 .heading_drag_handle{
-    font-size: 1.2rem;
-    padding: 0.2rem;
+    height: 1.3rem;
+    width: 1.3rem;
+    margin-right: 0.3rem;
     cursor: grab;
 }
 
@@ -165,6 +166,7 @@
 .heading_edit{
     height: 1.8rem;
     width: 1.8rem;
+    padding: 0.1rem;
     border-radius: 0.4rem;
     margin-right: 1.2rem;
 }
@@ -172,21 +174,24 @@
 .heading_delete{
     height: 1.8rem;
     width: 1.8rem;
+    padding: 0.1rem;
     border-radius: 0.4rem;
     margin-right: 0.8rem;
 }
 
 .content_edit{
-    height: 1.4rem;
-    width: 1.4rem;
+    height: 1.6rem;
+    width: 1.6rem;
+    padding: 0.1rem;
     border-radius: 0.3rem;
     position: absolute;
     left: 3.4rem;
 }
 
 .content_delete{
-    height: 1.4rem;
-    width: 1.4rem;
+    height: 1.6rem;
+    width: 1.6rem;
+    padding: 0.1rem;
     border-radius: 0.3rem;
     position: absolute;
     left: 1rem;
