--- a/views/components/global/SelectBox.module.css
+++ b/views/components/global/SelectBox.module.css
@@ -20,6 +20,8 @@
 }
 
 .label_con{
+    display: flex;
+    align-items: center;
     height: 2rem;
     border-radius: 0.5rem;
     padding: 0.2rem 0.5rem;
@@ -29,9 +31,10 @@
 
 .label_remove_icon{
     width: 1rem;
+    height: 1rem;
     margin-right: 0.4rem;
-    padding: 0.2rem;
-    padding-top: 0.35rem;
+    padding: 0.22rem;
+    margin-bottom: 0.7rem;
 }
 
 .empty{
