--- a/views/components/course/FloatingCard.module.css
+++ b/views/components/course/FloatingCard.module.css
@@ -40,9 +40,11 @@
 .fltcrd_sec1{
     display: flex;
     width: calc(100% - 2rem);
+    min-height: 3.2rem;
     margin-top: 1rem;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: center;
 }
 
 .fltcrd_price{
@@ -50,11 +52,6 @@
     font-weight: 700;
     margin-left: 0.5rem;
     color: #3A3A3A;
-}
-
-.fltcrd_dash{
-    width: 100%;
-    height: 0.5rem;
 }
 
 .space1{
