--- a/views/components/global/ReactiveTextInput.module.css
+++ b/views/components/global/ReactiveTextInput.module.css
@@ -41,6 +41,6 @@
 .success_status{
     position: absolute;
     left: 0.5rem;
-    width: 2rem;
-    height: 1.8rem;
+    font-size: 1.5rem;
+    width: 2rem !important;
 }
