--- a/views/components/modal/editCourse/DeleteContentModal.module.css
+++ b/views/components/modal/editCourse/DeleteContentModal.module.css
@@ -38,3 +38,24 @@
     width: 10rem;
     margin-right: 1rem;
 }
+
+@media(max-width:1024px){
+    
+}
+
+@media(max-width:767px){
+
+    .con{
+        width: 86vw;
+    } 
+
+    .submit_btn{
+        width: 7rem;
+        margin-left: 0.5rem;
+    }
+    
+    .cancel_btn{
+        width: 7rem;
+        margin-right: 0.5rem;
+    }
+}
