--- a/views/components/editCourse/EditCourseDuration.module.css
+++ b/views/components/editCourse/EditCourseDuration.module.css
@@ -9,3 +9,25 @@
     margin: 1rem;
     margin-right: 2rem;
 }
+
+@media(max-width:1024px){
+    
+}
+
+@media(max-width:767px){
+    
+    .con{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .edit_text{
+        margin-right: 0 !important;
+        margin-left: 0 !important;
+    }
+
+    .edit_text_input{
+        text-align: center !important;
+    }
+}
