--- a/views/components/editCourse/EditCourseIntroVideo.module.css
+++ b/views/components/editCourse/EditCourseIntroVideo.module.css
@@ -12,3 +12,21 @@
     margin-top: 1rem;
     overflow: hidden;
 }
+
+@media(max-width:1024px){
+    
+}
+
+@media(max-width:767px){
+    
+    .con{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .video{
+        margin-right: 0 !important;
+        margin-left: 0 !important;
+    }
+}
