--- a/views/components/editCourse/EditCourseLogo.module.css
+++ b/views/components/editCourse/EditCourseLogo.module.css
@@ -11,3 +11,22 @@
     margin-right: 2rem;
     margin-top: 1rem;
 }
+
+
+@media(max-width:1024px){
+    
+}
+
+@media(max-width:767px){
+    
+    .con{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .image{
+        margin-right: 0 !important;
+        margin-left: 0 !important;
+    }
+}
