--- a/views/components/editCourse/PublishRequest.module.css
+++ b/views/components/editCourse/PublishRequest.module.css
@@ -41,3 +41,19 @@
 .errors_ul{
     margin-right: 2rem;
 }
+
+@media(max-width:1024px){
+
+}
+
+@media(max-width:767px){
+    
+    .con{
+        align-items: center;
+        padding: 0 1rem;
+    }
+
+    .request_btn{
+        margin-right: 0;
+    }
+}
