--- a/views/components/editable/EditableTitle.module.css
+++ b/views/components/editable/EditableTitle.module.css
@@ -1,5 +1,3 @@
-
-
 .con{
     display: flex;
     width: 100%;
@@ -50,4 +48,32 @@
     margin-top: 0 !important;
     margin-bottom: 0.7rem !important;
     margin-right: 0.8rem !important;
+}
+
+
+@media(max-width:1024px){
+    
+}
+
+@media(max-width:767px){
+    
+    .con{
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .title_con{
+        margin: 0;
+        width: 92%;
+    }
+
+    .title{
+        margin: 0;
+        padding: 0;
+        padding-top: 1.2rem;
+        padding-bottom: 1rem;
+        width: 100%;
+        text-align: center;
+        border-radius: 1rem;
+    }
 }
