--- a/views/components/modal/editCourse/AddContentModal.module.css
+++ b/views/components/modal/editCourse/AddContentModal.module.css
@@ -112,3 +112,39 @@
     height: 1rem;
     width: 1rem;
 }
+
+@media(max-width:1024px){
+    
+}
+
+@media(max-width:767px){
+
+    .con{
+        width: 86vw;
+        margin: 0;
+        padding: 0;
+    }
+
+    .wrapper{
+        align-items: center;
+        margin: 0;
+        padding: 0 1rem;
+    }
+
+    .title{
+        width: auto;
+    }
+
+    .title_input{
+        width: 16rem;
+    }
+
+    .select_row{
+        width: 100%;
+        text-align: right;
+    }
+
+    .info1{
+        text-align: center;
+    }
+}
