--- a/views/layouts/EducatorDashboardLayout.module.css
+++ b/views/layouts/EducatorDashboardLayout.module.css
@@ -49,7 +49,6 @@
     height: 2rem;
     width: 2rem;
     margin-left: 2rem;
-    margin-right: 3rem;
 }
 
 .notification_img{
@@ -104,5 +103,11 @@
 
     .header_bar{
         height: 45px;
+    }
+
+    .logout_img{
+        height: 1.5rem;
+        width: 1.5rem;
+        margin-left: 1.5rem;
     }
 }
