--- a/views/components/buyCredit/PortalSelection.module.css
+++ b/views/components/buyCredit/PortalSelection.module.css
@@ -2,7 +2,7 @@
     width: 80%;
     min-height: 6rem;
     border-radius: 1rem;
-    margin-top: 2rem;
+    margin-top: 4rem;
     padding: 1.5rem;
     padding-top: 3rem;
     display: flex;
@@ -26,6 +26,7 @@
 
 .item_con{
     display: flex;
+    flex-direction: column;
     align-items: center;
     padding: 0.5rem 1.2rem;
     border-style: solid;
@@ -34,6 +35,21 @@
     border-radius: 0.8rem;
 }
 
+.item_icon{
+    width: 4rem;
+}
+
 .item_text{
-    margin-right: 0.4rem;
+    margin-top: 0.5rem;font-weight: 700;
+}
+
+@media(max-width:1024px){
+    
+}
+
+@media(max-width:767px){
+    
+    .item_icon{
+        width: 3rem;
+    }
 }
