--- a/views/components/buyCredit/UserAmountInput.module.css
+++ b/views/components/buyCredit/UserAmountInput.module.css
@@ -21,13 +21,28 @@
     font-weight: 700;
     top: -1.5rem;
     right: calc(50% - 6rem);
+    transition: ease 400ms;
 }
 
 .input{
+    margin-top: 1rem;
     width: 16rem;
 }
 
 .confirm_btn{
+    display: none;
     width: 12rem;
     margin-top: 2rem;
+}
+
+
+@media(max-width:1024px){
+    
+}
+
+@media(max-width:767px){
+    
+    .input{
+        width: 14rem;
+    }
 }
