--- a/views/components/global/Loading.module.css
+++ b/views/components/global/Loading.module.css
@@ -10,6 +10,9 @@
   position: absolute;
   width: 7.5rem;
   height: 7.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .lds_facebook {
