--- a/views/dynamics/transaction/UserBuyCreditSuccess.module.css
+++ b/views/dynamics/transaction/UserBuyCreditSuccess.module.css
@@ -1,9 +1,17 @@
 .con{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 3rem 0;
+}
+
+.card{
+    direction: rtl;
     width: 80%;
     max-width: 64rem;
     min-height: 6rem;
     border-radius: 1rem;
-    margin-top: 2rem;
     padding: 1.5rem;
     padding-top: 3rem;
     display: flex;
@@ -11,6 +19,8 @@
     justify-content: center;
     transition: ease 400ms;
     padding-bottom: 4rem;
+    margin: 0 3rem;
+    margin-top: 2rem;
 }
 
 .title{
@@ -46,15 +56,19 @@
 }
 
 .confirm_btn{
-    width: 16rem;
-    margin-top: 2rem;
+    width: 14rem;
 }
 
-.cancel_link{
-    margin-top: 1.8rem;
-    padding: 0.1rem 0.6rem;
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
+.pring_btn{
+    width: 12rem;
+}
+
+.btn_wrapper{
+    width: 100%;
+    display: flex;
+    margin-top: 3rem;
+    justify-content: space-around;
+    align-items: center;
 }
 
 
@@ -63,11 +77,23 @@
 }
 
 @media(max-width:767px){
-    .con{
+    .card{
         width: 92%;
+        margin-top: 0;
+        padding-bottom: 2rem
     }   
 
     .list_wrapper{
         width: 100%;
+    }
+
+    .btn_wrapper{
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .pring_btn{
+        width: 14rem;
+        margin-top: 1.2rem;
     }
 }
