--- a/views/components/buyCredit/AmountSelection.module.css
+++ b/views/components/buyCredit/AmountSelection.module.css
@@ -3,7 +3,7 @@
     min-height: 6rem;
     border-radius: 1rem;
     margin-top: 4rem;
-    padding: 1.5rem;
+    padding: 1.5rem 4rem;
     padding-top: 3rem;
     display: flex;
     flex-wrap: wrap;
@@ -32,8 +32,22 @@
     border-width: 2px;
     margin: 0.8rem;
     border-radius: 0.8rem;
+    min-width: 10rem;
 }
 
 .item_text{
-    margin-right: 0.4rem;
+    margin-right: 0.6rem;
+}
+
+
+@media(max-width:1024px){
+    
+}
+
+@media(max-width:767px){
+    
+    .con{
+        padding: 1.5rem 2rem;
+        padding-top: 3rem;
+    }
 }
