--- a/views/layouts/IndexHeader.module.css
+++ b/views/layouts/IndexHeader.module.css
@@ -1,6 +1,7 @@
 .header_con{
     height: 5rem;
     width: 100%;
+    direction: rtl;
     display: flex;
     align-items: center;
     padding: 0 4rem;
