--- a/views/components/buyCredit/PaymentTypeSelection.module.css
+++ b/views/components/buyCredit/PaymentTypeSelection.module.css
@@ -24,6 +24,21 @@
     right: calc(50% - 6rem);
 }
 
+.wrapper1{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0.5rem;
+}
+
+.credit_sec{
+    width: calc(50% - 1rem);
+    min-width: 16rem;
+    text-align: center;
+    margin: 0.5rem;
+}
+
 .item_con{
     display: flex;
     align-items: center;
