--- a/views/components/global/EmptyList.module.css
+++ b/views/components/global/EmptyList.module.css
@@ -1,12 +1,12 @@
 .con{
     width: 100%;
     height: 100%;
-    background-color: white;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
     user-select: none;
+    border-radius: 1rem;
 }
 
 .img{
@@ -17,7 +17,6 @@
 
 .text{
     font-weight: 700;
-    font-size: 1rem;
     color: #CECECE;
     margin-top: 1rem;
 }
@@ -32,7 +31,6 @@
     
     .text{
         font-weight: 700;
-        font-size: 0.88rem;
         color: #CECECE;
         margin-top: 1rem;
     }
