--- a/views/components/modal/global/StudentAuthModal.module.css
+++ b/views/components/modal/global/StudentAuthModal.module.css
@@ -1,7 +1,7 @@
 .con{
     width: 92vw;
     max-width: 48rem;
-    height: 80vh;
+    height: calc(100vh - 4rem);
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
@@ -26,7 +26,7 @@
 
 .wrapper{
     width: 90%;
-    height: 90%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -46,12 +46,25 @@
 .input1{
     width: 16rem !important;
     margin: 0 !important;
-    margin-top: 2rem !important;
+    margin-top: 1.6rem !important;
+    min-height: 2.6rem !important;
 }
 
 .btn1{
     width: 16rem;
     margin-top: 2rem;
+    min-height: 2.6rem;
+}
+
+.scroll_wrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: auto;
+    padding-top: 1rem;
+    padding-bottom: 3rem;
 }
 
 
