--- a/views/components/course/FloatingCard.module.css
+++ b/views/components/course/FloatingCard.module.css
@@ -33,8 +33,20 @@
     margin-top: 0.8rem;
     width: 80% !important;
     white-space: nowrap;
-    font-size: 0.95rem;
     height: 2.6rem;
+}
+
+.fltcrd_btn3{
+    margin-top: 0.8rem;
+    width: 80% !important;
+    white-space: nowrap;
+    height: 2.6rem;
+    border-radius: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+    user-select: none;
 }
 
 .fltcrd_sec1{
