--- a/views/layouts/StudentPanelLayout.module.css
+++ b/views/layouts/StudentPanelLayout.module.css
@@ -28,8 +28,9 @@
 
 .upper_sec{
     width: calc(100vw - 4rem);
-    height: 12rem;
-    background-color: #1A0D57;
+    height: 6rem;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
     border-radius: 0 0 1rem 1rem;
 }
 
