--- a/views/layouts/StudentPanelLayout.module.css
+++ b/views/layouts/StudentPanelLayout.module.css
@@ -30,8 +30,11 @@
     width: calc(100vw - 4rem);
     height: 6rem;
     background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgb(0, 0, 71) 35%, rgb(0, 10, 95) 100%);
     border-radius: 0 0 1rem 1rem;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
 }
 
 .mock_footer{
@@ -46,6 +49,34 @@
     font-weight: 700;
     color: #1b0d5752;
     margin-top: 4rem;
+}
+
+.tab_btn_wrapper{
+    display: flex;
+    align-items: center;
+}
+
+.tab_btn{
+    width: 6rem;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0.5rem;
+}
+
+.tab_btn_border{
+    height: 3px;
+    border-radius: 2px;
+    width: 5.4rem;
+    position: absolute;
+    bottom: 5px;
+    opacity: 0.2;
+    font-size: 0.9rem;
+}
+
+.tab_btn_border_selected{
+    opacity: 1 !important;
 }
 
 @media(max-width:1024px){
@@ -64,5 +95,25 @@
 
     .mock_footer{
         width: 100vw;
+    }
+
+    .tab_btn{
+        width: 4.3rem;
+        height: 3rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 0.3rem;
+        white-space: nowrap;
+        font-size: 0.72rem !important;
+    }
+    
+    .tab_btn_border{
+        height: 3px;
+        border-radius: 2px;
+        width: 3.6rem;
+        position: absolute;
+        bottom: 5px;
+        opacity: 0.2;
     }
 }
