--- a/views/components/editHomePage/EditHomePageSecCard.module.css
+++ b/views/components/editHomePage/EditHomePageSecCard.module.css
@@ -1,79 +1,124 @@
 .con{
-    width: 92%;
-    max-width: 64rem;
+    width: calc(100% - 2rem);
     display: flex;
-    min-height: 6rem;
+    height: 3.2rem;
     border-radius: 1rem;
-    margin-top: 1.4rem;
+    margin-top: 1rem;
+    overflow: hidden;
 }
 
-.right_sec{
-    width: calc(100% - 8rem);
+.visible_sec{
+    width: 4rem;
+    height: 100%;
     display: flex;
-    flex-direction: column;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    padding-right: 1.5rem;
-}
-
-.title_con{
-    display: flex;
-}
-
-.title{
-    font-weight: 700;
+    justify-content: center;
+    align-items: center;
 }
 
 .visiblity{
-    width: 1.6rem;
-    transform: translateY(-0.1rem);
-    margin-right: 0.4rem;
-    user-select: none;
+    width: 1.4rem;
+    height: 1.4rem;
 }
 
-.info_box{
-    width: 100%;
-}
-
-.controllers{
-    width: 100%;
+.wrapper1{
+    height: 100%;
+    width: calc(100% - 10rem);
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
 }
 
-.icon_btn1{
-    width: 2.4rem !important;
-    height: 2rem !important;
-    padding: 0 !important;
-    padding-left: 2px !important;
-    margin: 0 !important;
-    border-radius: 0.5rem !important;
-}
-
-.icon_btn2{
-    width: 2.4rem !important;
-    height: 2rem !important;
-    padding: 0 !important;
-    border-radius: 0.5rem !important;
-    margin: 0 !important;
-    margin-right: 1rem !important;
-}
-
-.icon_btn_icon{
-    width: 1.2rem !important;
-    height: 1.2rem !important;
-}
-
-.left_sec{
-    width: 8rem;
+.name_sec{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1rem 1.5rem;
+    width: 9rem;
+    font-weight: 700;
 }
 
-.icon{
-    width: 100%;
-    user-select: none;
+.title_sec{
+    padding-right: 1rem;
+    height: 100%;
+    width: calc(100% - 9rem);
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+}
+
+.control_sec{
+    width: 6rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: 2px 0 16px 1px rgb(168, 168, 168);
+}
+
+.control_sec2{
+    width: 4rem;
+    height: 100%;
+    margin-right: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: 2px 0 16px 1px rgb(168, 168, 168);
+}
+
+.delete_icon{
+    width: 1.3rem;
+}
+
+.edit_icon{
+    width: 1.3rem;
+}
+
+
+@media(max-width:1024px){
+    
+}
+
+@media(max-width:767px){
+
+    .con{
+        height: 6rem;
+    }
+    
+    .wrapper1{
+        flex-direction: column;
+    }
+
+    .name_sec{
+        width: 100%;
+        height: 2rem;
+        border-radius: 0 0 0.5rem 0.5rem;
+    }
+    
+    .title_sec{
+        width: 100%;
+        height: 4rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0.4rem;
+    }
+
+    .control_sec{
+        flex-direction: column;
+        width: 4rem;
+        margin-right: 2rem;
+        padding: 0.1rem 0;
+    }
+
+    .control_sec2{
+        flex-direction: column;
+        width: 4rem;
+        padding: 0.1rem 0;
+    }
+
+    .delete_icon{
+        width: 1.2rem;
+    }
+    
+    .edit_icon{
+        width: 1.2rem;
+    }
+    
 }
