--- a/views/dynamics/dashboard/HomePage.module.css
+++ b/views/dynamics/dashboard/HomePage.module.css
@@ -1,18 +1,43 @@
-.con{
-    display: flex;
-    flex-direction: column;
+.top_sec{
     width: 100%;
+    display: flex;
+    padding: 1rem 2rem;
+    flex-wrap: wrap;
 }
 
 .control_bar_sec{
-    width: 100%;
+    width: calc(100% - 16rem);
+    min-width: 28rem;
     display: flex;
-    padding: 1rem;
 }
 
-.control_bar_btn{
-    margin: 1rem;
-    margin-bottom: 0;
+.new_element_btn{
+    margin: 1rem !important;
+    margin-bottom: 0 !important;
+    margin-right: 0 !important;
+}
+
+.sort_btn{
+    margin: 1rem !important;
+    margin-bottom: 0 !important;
+}
+
+.confirm_sort{
+    margin: 1rem !important;
+    margin-bottom: 0 !important;
+    margin-right: 0 !important;
+}
+
+.cancel_sort{
+    margin: 1rem !important;
+    margin-bottom: 0 !important;
+}
+
+.open_homePage_btn{
+    width: 16rem;
+    margin: 0 !important;
+    margin-top: 1rem !important;
+    margin-left: 0 !important;
 }
 
 .sec_list{
@@ -21,4 +46,51 @@
     flex-direction: column;
     padding-right: 2rem;
     padding-bottom: 4rem;
+}
+
+
+@media(max-width:1024px){
+    
+}
+
+@media(max-width:767px){
+
+    .top_sec{
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .control_bar_sec{
+        width: 100%;
+        min-width: unset;
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .new_element_btn{
+        width: 16rem !important;
+    }
+    
+    .sort_btn{
+        width: 16rem !important;
+    }
+}
+
+@media(max-width:500px){
+
+    .control_bar_sec{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .new_element_btn{
+        width: 16rem !important;
+        margin: 0 !important;
+    }
+    
+    .sort_btn{
+        width: 16rem !important;
+        margin: 0 !important;
+        margin-top: 1rem !important;
+    }
 }
