--- a/views/components/modal/editHomePage/AddEditInfoBoxElementModal.module.css
+++ b/views/components/modal/editHomePage/AddEditInfoBoxElementModal.module.css
@@ -1,3 +1,4 @@
+
 .con{
     width: 48rem;
     border-radius: 1rem;
@@ -36,46 +37,12 @@
     margin-top: 1rem;
     margin-bottom: 1.4rem;
     margin-right: 1rem;
-    direction: rtl;
-}
-
-.items_con{
-    display: flex;
-    flex-wrap: wrap;
-    max-width: calc(92vw - 1.4rem);
-    margin-top: 1rem;
 }
 
 .confirm_btn{
     width: 16rem;
     margin-top: 2rem;
-    margin-bottom: 2rem;
-}
-
-.ts_con{
-    display: flex;
-    align-items: center;
-    margin: 0.6rem;
-}
-
-.ts_title{
-    margin-right: 0.3rem;
-}
-
-.ts_help{
-    width: 1rem;
-    margin-right: 0.3rem;
-}
-
-.ts_pop_overlay{
-    border-radius: 0.6rem;
-    overflow: hidden;
-    padding: 0 !important;
-}
-
-.ts_pop_con{
-    width: 24rem;
-    max-width: 92vw;
+    margin-bottom: 1rem;
 }
 
 @media(max-width:1024px){
@@ -89,6 +56,17 @@
 
     .con{
         width: 96vw;
+        height: 80vh;
         padding: 0.8rem 0rem;
+    }
+
+    .title{
+        margin-top: 0.8rem;
+        margin-bottom: 1rem;
+    }
+
+    .confirm_btn{
+        width: 12rem;
+        height: 2.6rem;
     }
 }
