--- a/views/components/modal/editHomePage/AddEditInfoBoxElementModal.module.css
+++ b/views/components/modal/editHomePage/AddEditInfoBoxElementModal.module.css
@@ -1,12 +1,13 @@
 
 .con{
     width: 38rem;
+    max-height: 90vh;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
     border-width: 1px;
     border-style: solid;
-    padding: 0.8rem 1.4rem;
+    padding: 0.8rem 0.8rem;
     direction: rtl;
 }
 
@@ -34,16 +35,16 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    padding: 0 0.8rem;
 }
 
 .title{
-    display: flex;
-    justify-content: space-between;
+    width: 100%;
     height: 2rem;
     font-weight: 700;
     margin-top: 1rem;
     margin-bottom: 1.4rem;
-    margin-right: 1rem;
+    text-align: center;
 }
 
 .title_input{
@@ -54,7 +55,7 @@
 
 .text_input{
     width: 100% !important;
-    margin-top: 1rem !important;
+    margin-top: 1.5rem !important;
 }
 
 .links_sec{
@@ -91,6 +92,35 @@
     max-width: 92vw;
 }
 
+.link_con2{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.link_row1{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.remove_link_btn{
+    width: 10rem !important;
+    margin: 0 !important;
+}
+
+.link_title_input{
+    width: calc(100% - 10.5rem) !important;
+    margin-bottom: 0 !important;
+}
+
+.link_url_input{
+    width: 100% !important;
+    margin-top: 0.5rem !important;
+    margin-bottom: 0 !important;
+}
+
 .type_select_sec{
     width: 100%;
     display: flex;
@@ -112,10 +142,15 @@
     margin-right: 0.3rem;
 }
 
+.updload_media{
+    width: 100%;
+    margin-top: 1rem;
+}
+
 .confirm_btn{
     width: 16rem;
     margin-top: 2rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 @media(max-width:1024px){
