--- a/views/components/modal/global/CategorySelectModal.module.css
+++ b/views/components/modal/global/CategorySelectModal.module.css
@@ -1,14 +1,21 @@
 
 .con{
-    width: 42rem;
-    max-height: 90vh;
+    width: 36rem;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
     border-width: 1px;
     border-style: solid;
-    padding: 0.8rem 0.8rem;
+    padding: 0.8rem 1.4rem;
     direction: rtl;
+}
+
+.loading{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
 }
 
 .close_btn{
@@ -30,48 +37,65 @@
     flex-direction: column;
 }
 
-.form_body{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding: 0 0.8rem;
-}
-
 .title{
-    width: 100%;
+    display: flex;
+    justify-content: space-between;
     height: 2rem;
     font-weight: 700;
     margin-top: 1rem;
     margin-bottom: 1.4rem;
-    text-align: center;
+    margin-right: 1rem;
 }
 
-.order_dd{
-    width: calc(50% - 2rem)!important;
-    margin-top: 1rem;
-}
 
-.active_group_select_row{
-    width: 100%;
-    margin-top: 2rem;
+.form_body{
     display: flex;
-    align-items: center;
-    margin-right: 0.3rem;
+    flex-direction: column;
+    width: 100%;
+    direction: ltr;
+    overflow-y: auto;
+    min-height: calc(50vh - 8rem);
+    max-height: calc(80vh - 8rem);
+    padding-left: 5%;
 }
 
-.grouping_text{
-    margin-right: 0.4rem;
-}
-
-.select_gorup_btn{
-    margin-top: 2rem;
-    width: 14rem;
+.addLevel1{
+    margin-bottom: 1rem;
+    margin-bottom: 2rem;
+    min-height: 2.4rem;
 }
 
 .confirm_btn{
-    width: 16rem !important;
+    width: 16rem;
     margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
+}
+
+.parent_node{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 0.8rem;
+    height: 1.8rem;
+    min-width:  18rem;
+    border-bottom: solid 1px rgb(221, 221, 221);
+}
+
+.parent_node_operation{
+    display: flex;
+    align-items: center;
+    direction: rtl;
+}
+
+.parent_node_add{
+    margin-left: 0.5rem;
+    font-size: 0.8rem;
+}
+
+.node_input{
+    border-width: 1px;
+    border-style: solid;
+    width: 8rem;
 }
 
 @media(max-width:1024px){
