--- a/public/statics/styles/shadows.css
+++ b/public/statics/styles/shadows.css
@@ -1,16 +1,16 @@
 
 .sm_card_shd{
-    box-shadow: 0 2px 12px 0px rgba(0,0,0,0.3);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 
 .md_card_shd{
-    box-shadow: 0 3px 12px 1px rgba(0,0,0,0.3);
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
 }
 
 .lg_card_shd{
-    box-shadow: 0 6px 16px 2px rgba(0,0,0,0.3);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 .xl_card_shd{
-    box-shadow: 0 8px 16px 3px rgba(0,0,0,0.3);
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
