--- a/views/components/store/RightSideFilter.module.css
+++ b/views/components/store/RightSideFilter.module.css
@@ -1,8 +1,56 @@
 .con{
     width: 100%;
-    min-height: 30rem;
+    min-height: 26rem;
     background-color: white;
     border-radius: 0.9rem;
     direction: rtl;
-    padding: 1.2rem 0.6rem;
+    padding: 1.5rem;
+}
+
+.title{
+    margin-bottom: 1rem;
+    font-weight: 500;
+}
+
+.close_btn{
+    width: 2.2rem;
+    height: 2.2rem;
+    padding: 0.6rem;
+    border-radius: 0.5rem;
+    position: absolute;
+    right: -1.1rem;
+    top: -1.1rem;
+}
+
+.fmodal_con{
+    width: 32rem;
+    max-width: calc(96vw - 4rem);
+    max-height: 90vh;
+    min-height: 16rem;
+    padding: 1.5rem;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.fmodal_wrapper{
+    display: flex;
+    flex-direction: column;
+    direction: rtl;
+    padding: 1rem;
+    overflow-y: auto;
+    min-height: 14rem;
+    width: 92%;
+}
+
+.fmodal_title{
+    width: 100%;
+    direction: rtl;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.fmodal_submit{
+    width: 12rem !important;
 }
