--- a/views/components/store/SortBar.module.css
+++ b/views/components/store/SortBar.module.css
@@ -15,4 +15,46 @@
 .btn_con{
     padding: 0.4rem 1.4rem;
     border-radius: 0.8rem;
+    width: 7.6rem;
+    text-align: center;
+    white-space: nowrap;
+}
+
+.smodal_con{
+    width: 32rem;
+    max-width: calc(96vw - 4rem);
+    max-height: 90vh;
+    min-height: 20rem;
+    padding: 1.5rem;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.smodal_title{
+    font-weight: 700;
+    margin-bottom: 1.4rem;
+}
+
+.smodal_btn{
+    width: 12rem;
+    border-style: solid;
+    border-width: 1px;
+    margin: 0.7rem !important;
+}
+
+.smodal_submit{
+    width: 12rem !important;
+    margin-top: 1rem;
+}
+
+.close_btn{
+    width: 2.2rem;
+    height: 2.2rem;
+    padding: 0.6rem;
+    border-radius: 0.5rem;
+    position: absolute;
+    right: -1.1rem;
+    top: -1.1rem;
 }
