--- a/views/dynamics/index/Store.module.css
+++ b/views/dynamics/index/Store.module.css
@@ -5,7 +5,8 @@
     flex-direction: row-reverse;
     direction: ltr;
     padding: 0 3rem;
-    background-color: rgb(253, 236, 236);
+    background-color: #f5f5f5;
+    /* background-color: rgb(253, 236, 236); */
 }
 
 .filter_bar_con{
@@ -13,7 +14,7 @@
     width: 18.75rem;
     min-width: 18.75rem;
     min-height: 30rem;
-    background-color: rgb(214, 245, 179);
+    /* background-color: rgb(214, 245, 179); */
 }
 
 .main_sec_wrapper{
@@ -24,13 +25,13 @@
     flex-direction: column;
     direction: ltr;
     align-items: flex-end;
-    background-color: rgb(152, 195, 231);
+    /* background-color: rgb(152, 195, 231); */
 }
 
 .breadcrum_con{
     width: 100%;
     height: 3rem;
-    background-color: rgb(202, 173, 255);
+    /* background-color: rgb(202, 173, 255); */
 }
 
 .sort_bar_con{
@@ -39,43 +40,170 @@
     align-items: flex-end;
     width: 100%;
     height: 3.5rem;
-    background-color: rgb(236, 173, 255);
+    /* background-color: rgb(236, 173, 255); */
 }
 
 .sort_bar{
-    max-width: 82rem;
+    max-width: 78rem;
+    width: 100%;
 }
 
 .mobile_filter_sort_bar{
     display: none;
 }
 
-.stor_card_wrapper{
+.store_card_wrapper{
     width: 100%;
     height: auto;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row-reverse;
-    max-width: 82rem;
-    background-color: rgb(255, 118, 118);
+    max-width: 78rem;
+    /* background-color: rgb(255, 118, 118); */
 }
 
 .card{
     margin: 1.5%;
 }
 
-@media(max-width:1227px){
+.pagination_wrapper{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.pagination{
+    width: 100%;
+}
+
+@media(max-width:1082px){
     
     .filter_bar_con{
         display: none;
     }
+
+    .sort_bar_con{
+        display: none;
+    }
+
+    .mobile_filter_sort_bar{
+        display: flex;
+        width: 58rem;
+        direction: rtl;
+        padding-right: 1rem;
+    }
+
+    .mob_filter_btn{
+        margin-left: 1rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0.3rem;
+    }
+
+    .mob_sort_btn{
+        margin-top: 0.5rem;
+        margin-bottom: 0.3rem;
+    }
     
+    .con{
+        padding: 0;
+    }
+
+    .breadcrum_con{
+        width: 58rem;
+    }
+
     .main_sec_wrapper{
         width: 100%;
-        
+        padding-right: 0;
+        align-items: center;
+    }
+
+    .store_card_wrapper{
+        width: 58rem;
+    }
+
+    .card{
+        margin: 1rem;
+    }
+}
+
+@media(max-width:960px){
+
+    .mobile_filter_sort_bar{
+        width: 43.5rem;
+    }
+
+    .breadcrum_con{
+        width: 43.5rem;
+    }
+
+    .store_card_wrapper{
+        width: 43.5rem;
+    }
+
+    .card{
+        margin: 1rem;
     }
 }
 
 @media(max-width:767px){
+
+    .mobile_filter_sort_bar{
+        width: 35rem;
+    }
+
+    .breadcrum_con{
+        width: 35rem;
+    }
+
+    .store_card_wrapper{
+        width: 35rem;
+    }
+
+    .card{
+        margin: 0.8rem;
+    }
+
+    .pagination{
+        width: 100% !important;
+    }
+}
+
+@media(max-width:574px) {
+
+    .mobile_filter_sort_bar{
+        width: 23.2rem;
+    }
+
+    .breadcrum_con{
+        width: 23.2rem;
+    }
     
+    .store_card_wrapper{
+        width: 23.2rem;
+    }
+
+    .card{
+        margin: 0.8rem;
+    }
+}
+
+@media(max-width:380px) {
+
+    .mobile_filter_sort_bar{
+        width: 21.6rem;
+    }
+
+    .breadcrum_con{
+        width: 21.6rem;
+    }
+    
+    .store_card_wrapper{
+        width: 21.6rem;
+    }
+
+    .card{
+        margin: 0.4rem;
+    }
 }
