--- a/views/components/homePage/Intro.module.css
+++ b/views/components/homePage/Intro.module.css
@@ -42,15 +42,15 @@
 }
 
 .ib_image{
-    width: 18rem;
+    width: calc(100% - 30rem);
     height: auto;
+    border-radius: 1rem;
 }
 
 .ib_sec2{
     display: flex;
     flex-direction: column;
-    width: calc(100% - 22rem);
-    max-width: 30rem;
+    width: 26rem;
     align-items: flex-start;
 }
 
@@ -59,6 +59,8 @@
     line-height: 1.9rem;
     text-align: justify;
     margin-top: 1rem;
+    width: 100%;
+    min-height: 8rem;
 }
 
 .ib_link{
