--- a/views/dynamics/index/ChangePassword.module.css
+++ b/views/dynamics/index/ChangePassword.module.css
@@ -32,6 +32,15 @@
 .sub1{
     margin-top: 2rem;
     font-size: 0.8rem;
+    text-align: center;
+    max-width: 90%;
+}
+
+.back_link{
+    font-size: 0.8rem;
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
 }
 
 .comp1{
@@ -81,4 +90,64 @@
     font-size: 1.1rem;
     font-weight: 700;
     margin-top: 2rem;
+}
+
+
+@media(max-width:1024px){
+    
+}
+
+@media(max-width:767px){
+    
+    .wrapper_card{
+        height: 30rem;
+        width: 20rem;
+        margin-bottom: 2rem;
+    }
+
+    .title1{
+        font-size: 1.1rem;
+    }
+    
+    .sub1{
+        margin-top: 1.5rem;
+    }
+    
+    .back_link{
+        top: 1.5rem;
+        right: 1.5rem;
+    }
+    
+    .comp1{
+        margin-top: 7rem;
+    }
+    
+    .comp2{
+        margin-top: 6rem;
+    }
+    
+    
+    .submit1{
+        margin-top: 4.2rem;
+    }
+    
+    .submit2{
+        margin-top: 1rem;
+    }
+    
+    .submit3{
+        margin-top: 0rem;
+    }
+    
+    .submit4{
+        margin-top: 10rem;
+    }
+    
+    .img1{
+        height: 5rem;
+    }
+    
+    .title2{
+        font-size: 1rem;
+    }
 }
