--- a/views/components/modal/settings/EditSitesIconModal.module.css
+++ b/views/components/modal/settings/EditSitesIconModal.module.css
@@ -1,6 +1,6 @@
 .con{
-    width: 48rem;
-    height: 80vh;
+    width: 34rem;
+    min-height: 24rem;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
@@ -58,6 +58,30 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
+}
+
+.img_con{
+    height: 10rem;
+    width: 10rem;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    overflow: hidden;
+}
+
+.add_img{
+    font-size: 6rem;
+    padding-top: 1.4rem;
+    padding-left: 0.2rem;
+}
+
+.img{
+    width: 100%;
+    height: 100%;
 }
 
 .confirm_btn{
