--- a/public/statics/styles/forced.css
+++ b/public/statics/styles/forced.css
@@ -62,7 +62,7 @@
 .ant-select-selector{
     height: 100% !important;
     border-radius: 1rem !important;
-    border: solid 2px #939597 !important;
+    border: solid 2px #EAEAEA !important;
 }
 .ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input) .ant-select-selector{
     box-shadow: none !important;
