--- a/views/dynamics/stdPanel/EditProfile.module.css
+++ b/views/dynamics/stdPanel/EditProfile.module.css
@@ -16,6 +16,10 @@
     background-color: white;
 }
 
+.loading{
+    min-height: 70vh;
+}
+
 .title_card{
     position: absolute;
     padding: 0.6rem;
@@ -40,6 +44,7 @@
 
 .input{
     width: calc(50% - 2vw) !important;
+    margin-top: 1.5rem !important;
 }
 
 .input:nth-child(even){
@@ -48,6 +53,7 @@
 
 .unchangable1{
     display: flex;
+    margin-top: 1.5rem !important;
     width: calc(50% - 2vw) !important;
     border-style: solid;
     border-width: 2px;
@@ -64,9 +70,10 @@
 
 .unchangable_label{
     position: absolute;
-    top: -0.8rem;
+    top: -0.7rem;
     right: 1rem;
     padding: 0 0.4rem;
+    font-size: 0.75rem;
 }
 
 .submit_wrapper{
