--- a/views/components/editCourse/EditCourseGroups.module.css
+++ b/views/components/editCourse/EditCourseGroups.module.css
@@ -1,3 +1,16 @@
 .con{
     margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.group_sec{
+    background-color: white;
+    padding: 1rem;
+    margin-right: 2rem;
+    margin-left: 2rem;
+    margin-top: 2rem;
+    border-radius: 1rem;
+    font-weight: 700;
 }
