--- a/views/dynamics/index/Store.module.css
+++ b/views/dynamics/index/Store.module.css
@@ -12,6 +12,21 @@
 .loading{
     width: 100%;
     min-height: calc(100vh - 5.6rem);
+    padding-bottom: 5rem;
+}
+
+.empty_list{
+    width: 100%;
+    max-width: 78rem;
+    margin-top: 1rem;
+    min-height: calc(70vh - 5.6rem);
+    padding-bottom: 5rem;
+}
+
+.course_loading{
+    width: 100%;
+    min-height: calc(70vh - 5.6rem);
+    padding-bottom: 3rem;
 }
 
 .filter_bar_con{
@@ -19,6 +34,7 @@
     width: 18.75rem;
     min-width: 18.75rem;
     min-height: 30rem;
+    margin-bottom: 2rem;
     /* background-color: rgb(214, 245, 179); */
 }
 
