--- a/views/components/overview/IncomeChart.module.css
+++ b/views/components/overview/IncomeChart.module.css
@@ -25,6 +25,13 @@
     box-shadow: 0 0.2rem 1rem 0.04rem rgb(0, 0, 0, 0.15);
 }
 
+.yaxis{
+    width: 1rem;
+    font-size: 0.7rem;
+    white-space: nowrap;
+    transform: rotateZ(45deg);
+}
+
 
 @media(max-width:1024px){
     
