--- a/views/components/course/CourseInfo.module.css
+++ b/views/components/course/CourseInfo.module.css
@@ -36,7 +36,9 @@
 
 .text{
     white-space: pre-wrap;
+    text-align: justify;
     padding: 1rem 0;
+    line-height: 2rem;
 }
 
 @media(max-width:1024px){
